[package]
name = "alloy-resilient-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
alloy = { version = "0.1.2", features = [
    "full",
    "node-bindings",
    "rpc-types-debug",
    "rpc-types-trace",
    "json-rpc",
    "rpc-client",
] }
serde = { version = "1", features = ["derive"] }
url = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
sysinfo = "0.30"
